# tab5Write

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LEAN.md  README.md  TODO.md  TODO_p1.md  TODO_v2.md  partitions.csv  sdkconfig.defaults
components/tab5_keyboard/: CMakeLists.txt  tab5_keyboard.cpp
components/tab5_keyboard/include/: tab5_keyboard.h
docs/: screen-capture.md
main/: CMakeLists.txt  app_build_info.h  app_display.cpp  app_display.h  app_event.h  app_font.cpp  app_font.h  app_input.cpp  app_input.h  app_main.cpp  app_queue.h  app_snapshot.cpp  app_snapshot.h  app_ui.cpp  app_ui.h  cursor.h  editor_core.cpp  editor_core.h  idf_component.yml  key_event.h  keybinding.cpp  keybinding.h  piece_table.cpp  piece_table.h  selection.h  text_input_composer.cpp  text_input_composer.h  text_view.cpp  text_view.h  theme.h  undo_stack.cpp  undo_stack.h  x12y12pxMaruMinyaHangul_36.c
notes/: tutorial01.md
ref/ko-fonts/: README.md  generate_font.sh  x12y12pxMaruMinyaHangul_36.c
test/: CMakeLists.txt  test_editor_core.cpp  test_keybinding.cpp  test_text_input_composer.cpp
tools/: capture_lvgl_snapshot.py
