idf_component_register(SRCS "app_main.cpp"
                            "app_display.cpp"
                            "app_input.cpp"
                            "app_ui.cpp"
                            "text_input_composer.cpp"
                            "piece_table.cpp"
                            "undo_stack.cpp"
                            "editor_core.cpp"
                            "x12y12pxMaruMinyaHangul_36.c"
                    INCLUDE_DIRS ".")


